# news-pythonic-api

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
articles_api/: manage.py  pytest.ini
articles_api/api/: serializers.py  urls.py  views.py
articles_api/articles_api/: asgi.py  settings.py  urls.py  wsgi.py
articles_api/tests/api/: test_views.py
scripts/: start-tests.sh  start.sh
